moved phpthumb to composer

--- a/lib/composer/composer.json
+++ b/lib/composer/composer.json
@@ -3,6 +3,7 @@
         "kriswallsmith/assetic": "dev-master",
 		"lmammino/jsmin4assetic": "dev-master",
 		"natxet/CssMin": "dev-master",
-		"smarty/smarty": "3.x"
+		"smarty/smarty": "3.x",
+		"james-heinrich/phpthumb": "1.x"
     }
 }
