--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "author": "WireDot",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-sass": "^2.2.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp": "4.0.2",
+    "gulp-concat": "2.6.1",
+    "gulp-sass": "5.1.0",
+    "gulp-notify": "4.0.0",
+    "gulp-plumber": "1.2.1",
+    "gulp-sourcemaps": "3.0.0",
+    "sass": "1.56.0"
   }
 }
