--- a/lib/composer/composer.json
+++ b/lib/composer/composer.json
@@ -3,7 +3,7 @@
         "kriswallsmith/assetic": "1.3.x",
 		"lmammino/jsmin4assetic": "dev-master",
 		"natxet/cssmin": "3.x",
-		"smarty/smarty": "4.2.x",
+		"smarty/smarty": "5.x.x",
 		"james-heinrich/phpthumb": "1.x"
     }
 }
